add aerial params

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,7 @@ baseURL = "http://oliverschmid.space/"
 languageCode = "en-us"
 title = "Oliver Schmid"
 theme = "aerial"
+
+[params]
+  Name = "Oliver Schmid"
+  About = "Software Developer  •  Thinker  •  Trying to Live Forever"
