move headers to netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,9 @@ command = "hugo"
 
 [build.environment]
 HUGO_VERSION = "0.40.1"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
