--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "themes/aerial"]
-	path = themes/aerial
-	url = https://github.com/sethmacleod/aerial.git
-[submodule "themes/website-theme"]
-	path = themes/website-theme
-	url = https://github.com/oschmid/website-theme.git
-[submodule "themes/hugo-theme-casper"]
-	path = themes/hugo-theme-casper
-	url = https://github.com/vjeantet/hugo-theme-casper.git
+[submodule "themes/arabica"]
+	path = themes/arabica
+	url = https://github.com/nirocfz/arabica
