--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/arabica"]
-	path = themes/arabica
-	url = https://github.com/nirocfz/arabica
+[submodule "themes/website-theme"]
+	path = themes/website-theme
+	url = https://github.com/oschmid/website-theme
