--minify and enableRobotsTXT

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-publish = "public"
-command = "hugo"
+  publish = "public"
+  command = "hugo --minify"
 
 [build.environment]
-HUGO_VERSION = "0.50"
+  HUGO_VERSION = "0.50"
