add no-my-cellphone-wont-blow-up-your-gas-station story

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,10 @@ title = "Oliver Schmid"
 [params]
   description = "My personal blog"
 
+[privacy]
+  [privacy.youtube]
+    privacyEnhanced = true
+
 [sitemap]
   changeFreq = "weekly"
   priority = "0.5"
