--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ title = "Oliver Schmid"
 
 [params]
   description = "Personal Blog"
+  defaultLicense = "cc-by-4.0"
 
 [privacy]
   [privacy.youtube]
