add hugo pagination and syntax highlighting

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "https://oliverschmid.space/"
 enableRobotsTXT = true
 paginate = 5
+pygmentsUseClasses = true
 rssLimit = 20
 title = "Oliver Schmid"
 
