--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^37.2.0"
   },
   "scripts": {
+    "build:functions": "netlify-lambda build content/apps/functions",
     "test": "echo \"Error: no test specified\" && exit 0"
   }
 }
