--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,6 +12,8 @@ collections:
 - name: "posts"
   label: "Posts"
   folder: "content/post"
+  extension: "md"
+  format: "toml-frontmatter"
   create: true
   slug: "{{slug}}"
   fields:
