--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,6 +19,6 @@ collections:
   fields:
   - { label: "Title", name: "title", widget: "string" }
   - { label: "Date", name: "date", widget: "datetime", format: "YYYY-MM-DDTHH:mm:ssZZ" }
-  - { label: "Image", name: "image", widget: "image" }
+  - { label: "Image", name: "image", widget: "image", required: false }
   - { label: "Tags", name: "tags", widget: "list" }
   - { label: "Draft", name: "draft", widget: "boolean", default: true }
