--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,3 +22,4 @@ collections:
   - { label: "Image", name: "image", widget: "image", required: false }
   - { label: "Tags", name: "tags", widget: "list" }
   - { label: "Draft", name: "draft", widget: "boolean", default: true }
+  - {label: "Body", name: "body", widget: "markdown"}
