--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "npm run-script build"
+  command = "gulp"
   functions = "functions"
 
 [build.environment]
