--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
   publish = "public"
-  command = "gulp"
-  functions = "functions"
+  command = "hugo --minify"
 
 [build.environment]
   HUGO_VERSION = "0.55.4"
