--- a/static/app/dry-eye/manifest.json
+++ b/static/app/dry-eye/manifest.json
@@ -3,12 +3,12 @@
     "name": "Dry Eye Timer",
     "icons": [
         {
-              "src": "./eye-open.svg",
+              "src": "dry-eye/eye-open.svg",
               "type": "image/svg",
               "sizes": "72x72"
         }
     ],
-    "start_url": "./",
+    "start_url": "dry-eye",
     "background_color": "#000000",
     "theme_color": "#000000", 
     "display": "standalone"
