--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "netlify-cli": "^6.14.21"
+    "rss-parser": "^3.12.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^6.15.0"
   }
 }
