--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "dateformat": "^5.0.3",
     "mustache": "^4.2.0",
     "rss-parser": "^3.12.0"
   },
