--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@netlify/functions": "^1.0.0",
     "dateformat": "^5.0.3",
     "mustache": "^4.2.0",
+    "node-fetch": "^3.2.6",
     "rss-parser": "^3.12.0"
   },
   "devDependencies": {
